[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/ship/Plumes.tres" type="Texture" id=1]
[ext_resource path="res://scenes/ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://scenes/ship/Shields.tres" type="Texture" id=3]
[ext_resource path="res://scenes/bullet/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/effects/Engine 1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/effects/Ship Bounce Wall.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/ship/ExplodingShip.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ship/Ships.tres" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 18.0

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 176, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 128, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 144, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "low",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "high",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=13]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "low" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "low" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteLeft:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteRight:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "low" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteLeft:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteRight:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "low" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlumeSpriteLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlumeSpriteRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlumeSpriteLeft:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "high" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlumeSpriteRight:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "low" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlumeSpriteRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlumeSpriteLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 144, 208, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 192, 208, 48, 48 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=22]
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Ship" type="RigidBody2D"]
collision_layer = 2147483650
collision_mask = 22
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
angular_damp = 10.0
script = ExtResource( 2 )
bullet_scene = ExtResource( 4 )
explosion_scene = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlumeSpriteLeft" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -10, -16 )
rotation = 1.5708
frames = SubResource( 7 )
animation = "high"
centered = false

[node name="PlumeSpriteRight" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -10, 0 )
rotation = 1.5708
frames = SubResource( 7 )
animation = "high"
centered = false

[node name="ShipSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
frames = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/forward = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/turn_left = SubResource( 15 )
anims/turn_left_forward = SubResource( 16 )
anims/turn_right = SubResource( 17 )
anims/turn_right_forward = SubResource( 18 )

[node name="Shield" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 21 )

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 26, 0 )

[node name="Thrust" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="ShieldAnimation" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 22 )
[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
